--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    
+    <!-- <div id="root"></div> -->
+
+    <embed src="./Rangesh-kumar-Resume-.pdf" width="800px" height="2100px" />
+
   </body>
 </html>
