--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <!-- <div id="root"></div> -->
 
-    <embed src="./Rangesh-kumar-Resume-.pdf" width="800px" height="2100px" />
+    <embed src="./Rangesh-kumar-Resume-.pdf"  />
 
   </body>
 </html>
